--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ script:
 - mkdir _build
 - pdflatex -interaction=nonstopmode -halt-on-error -output-directory _build InfoSec.tex
 - pdflatex -interaction=nonstopmode -halt-on-error -output-directory _build InfoSec.tex
+- mv _build/InfoSec.pdf _build/COS432_InfoSec.pdf
 deploy:
   provider: releases
   api_key:
